src/components/Project/ProjectHeader/styles.css
.project-name-form {
  @apply mb-6 flex justify-between;
}

.project-header-container {
  @apply flex flex-wrap bg-bus py-16;
}

.project-header-phase-select-container {
  @apply ml-8 w-96;
}

/* the select field empty selection button needs a custom position here */
.project-header-phase-select-container .empty-select-field-button {
  @apply top-4;
}

.project-header-icon {
  margin-right: 8px;
  display: flex;
  align-items: center;
  justify-content: center;
}
.project-header-phase {
  display: flex;
  align-items: center;
  font-size: 20px;
  color: white;
}

